--- a/pfe-frontend/src/app/app.component.html
+++ b/pfe-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex">
-  <app-sidebar></app-sidebar>
-  <div class="content flex-grow-1 p-4" style="margin-left: 250px;">
+  <app-sidebar *ngIf="showAdminSidebar"></app-sidebar>
+  <div class="content flex-grow-1 p-4" [style.margin-left]="showAdminSidebar ? '250px' : '0'">
     <router-outlet></router-outlet>
   </div>
 </div>
