--- a/pfe-frontend/src/app/admin-dashboard/employee-edit/employee-edit.component.scss
+++ b/pfe-frontend/src/app/admin-dashboard/employee-edit/employee-edit.component.scss
@@ -1,4 +1,9 @@
 /* src/app/pages/employee-edit/employee-edit.component.scss */
 .form-control, .form-select {
-    border-color: #28a745;
+    border-color: #28a79c;
+  }
+  .btn{
+    background-color: #28a3a7;
+    border-color: #179090;
+    color: white;
   }
