--- a/pfe-frontend/src/app/layout/sidebar/sidebar.component.html
+++ b/pfe-frontend/src/app/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<nav class="sidebar bg-success text-white vh-100 p-3">
+<nav class="sidebar bg-blue text-white vh-100 p-3">
     <h3 class="text-center mb-4">Admin Dashboard</h3>
     <ul class="nav flex-column">
       <li class="nav-item">
