--- a/pfe-frontend/src/app/layout/sidebar/sidebar.component.scss
+++ b/pfe-frontend/src/app/layout/sidebar/sidebar.component.scss
@@ -7,5 +7,5 @@
   }
   
   .nav-link.active {
-    background-color: darken(#28a745, 10%); // Darker green for active link
+    background-color: darken(#1417ad, 10%); // Darker green for active link
   }
