--- a/pfe-frontend/src/app/admin-dashboard/employee-list/employee-list.component.html
+++ b/pfe-frontend/src/app/admin-dashboard/employee-list/employee-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h2 class="text-success mb-4">Employee List</h2>
-    <button class="btn btn-success mb-3 text-white" routerLink="/employees/create">Add Employee</button>
+    <h2 class="text-white mb-4">Employee List</h2>
+    <button class="btn btn-primary mb-3 text-white" routerLink="/employees/create">Add Employee</button>
     <table class="table table-striped">
       <thead class="bg-success text-white">
         <tr>
