--- a/pfe-frontend/src/app/pages/hr-dashboard/components/employee/hr-employee-edit/hr-employee-edit.component.html
+++ b/pfe-frontend/src/app/pages/hr-dashboard/components/employee/hr-employee-edit/hr-employee-edit.component.html
@@ -3,11 +3,11 @@
     <h2>Edit Employee</h2>
   </div>
   
-  <div class="form-container">
+  <div class="form-container text-black" >
     <div *ngIf="loading" class="loading">Loading...</div>
     <div *ngIf="error" class="error">{{ error }}</div>
 
-    <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()" *ngIf="!loading && !error">
+    <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()" *ngIf="!loading && !error" >
       <div class="form-row">
         <div class="form-group">
           <label for="first_name">First Name</label>
