--- a/pfe-frontend/src/app/pages/hr-dashboard/components/leave/hr-leave-type-create/hr-leave-type-create.component.html
+++ b/pfe-frontend/src/app/pages/hr-dashboard/components/leave/hr-leave-type-create/hr-leave-type-create.component.html
@@ -3,7 +3,7 @@
     <h2>Create Leave Type</h2>
   </div>
   
-  <div class="form-container">
+  <div class="form-container text-black">
     <div *ngIf="error" class="error">{{ error }}</div>
 
     <form [formGroup]="leaveTypeForm" (ngSubmit)="onSubmit()">
@@ -32,10 +32,8 @@
       </div>
       
       <div class="form-group">
-        <label class="checkbox-label">
-          <input type="checkbox" formControlName="is_paid">
-          Paid Leave
-        </label>
+        <label for="is_paid">Paid Leave</label>
+        <input type="checkbox" id="is_paid" formControlName="is_paid">
       </div>
       
       <div class="form-actions">
