--- a/pfe-frontend/src/app/core/features/components/user/user-edit/user-edit.component.html
+++ b/pfe-frontend/src/app/core/features/components/user/user-edit/user-edit.component.html
@@ -34,6 +34,6 @@
         <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
         {{ loading ? 'Updating...' : 'Update' }}
       </button>
-      <a routerLink="/employees" class="btn btn-secondary ms-2">Cancel</a>
+      <a routerLink="/admin/users" class="btn btn-secondary ms-2">Cancel</a>
     </form>
   </div>
