--- a/pfe-frontend/src/app/core/features/components/employee/employee-edit/employee-edit.component.html
+++ b/pfe-frontend/src/app/core/features/components/employee/employee-edit/employee-edit.component.html
@@ -87,7 +87,7 @@
       </div>
       
       <div class="form-actions">
-        <button type="button" class="btn-secondary" routerLink="/hr-dashboard/employee">Cancel</button>
+        <button type="button" class="btn-secondary" (click)="onCancel()">Cancel</button>
         <button type="submit" class="btn-primary" [disabled]="employeeForm.invalid || loading">Update Employee</button>
       </div>
     </form>
