--- a/pfe-frontend/src/app/core/features/components/leave/leave-requests/leave-requests.component.html
+++ b/pfe-frontend/src/app/core/features/components/leave/leave-requests/leave-requests.component.html
@@ -3,7 +3,7 @@
   <div class="header-section">
     <h2>Leave Requests</h2>
     <button class="btn-primary" (click)="openNewRequest()">
-      <i class="fas fa-plus"></i> New Request
+      <i class="fas fa-plus"></i> Refresh Requests
     </button>
   </div>
 
