--- a/pfe-frontend/src/app/core/features/components/user/user-list/user-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/user/user-list/user-list.component.html
@@ -2,12 +2,13 @@
   <h2 class="text-white mb-4">Users List</h2>
   <button class="btn btn-primary mb-3 text-white" routerLink="/admin/users/create">Add User</button>
   <table class="table table-striped">
-    <thead class="bg-success text-white">
+    <thead>
       <tr>
         <th>ID</th>
         <th>Name</th>
         <th>Email</th>
-        <th>Role</th>
+        <th>Roles</th>
+        <th>Status</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -16,10 +17,14 @@
         <td>{{ user.id }}</td>
         <td>{{ user.name }}</td>
         <td>{{ user.email }}</td>
-        <td>{{ user.role?.name || 'N/A' }}</td>
         <td>
-          <button class="btn btn-outline-primary btn-sm me-2" [routerLink]="['/admin/users/edit', user.id]">Edit</button>
-          <button (click)="deleteUser(user.id!)" class="btn btn-danger btn-sm">Delete</button>
+          <span *ngFor="let role of user.roles" class="role-badge">
+            {{ role.name }}
+          </span>
+        </td>
+        <td>{{ user.status }}</td>
+        <td>
+          <!-- Actions -->
         </td>
       </tr>
     </tbody>
