--- a/pfe-frontend/src/app/core/features/components/permissions/permission-list/permission-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/permissions/permission-list/permission-list.component.html
@@ -1,7 +1,7 @@
 <div class="permission-list">
     <div class="header">
       <h2>Permissions</h2>
-      <button routerLink="/admin/permissions/create" class="btn-primary">
+      <button routerLink="/permissions/create" class="btn-primary">
         + New Permission
       </button>
     </div>
