--- a/pfe-frontend/src/app/core/features/components/roles/role-list/role-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/roles/role-list/role-list.component.html
@@ -1,7 +1,7 @@
 <div class="role-list">
   <div class="header">
     <h2>Roles</h2>
-    <button routerLink="/admin/roles/create" class="btn-primary">
+    <button routerLink="/roles/create" class="btn-primary">
       + New Role
     </button>
   </div>
