--- a/pfe-frontend/src/app/core/features/components/user/user-create/user-create.component.html
+++ b/pfe-frontend/src/app/core/features/components/user/user-create/user-create.component.html
@@ -47,7 +47,7 @@
 
     <!-- Buttons -->
     <div class="form-actions">
-      <button type="button" class="btn btn-secondary" routerLink="/admin/users">Cancel</button>
+      <button type="button" class="btn btn-secondary" routerLink="/users">Cancel</button>
       <button type="submit" class="btn btn-primary" [disabled]="loading">
         {{ loading ? 'Creating...' : 'Create User' }}
       </button>
