--- a/pfe-frontend/src/app/core/features/components/permissions/permission-edit/permission-edit.component.html
+++ b/pfe-frontend/src/app/core/features/components/permissions/permission-edit/permission-edit.component.html
@@ -4,13 +4,13 @@
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label>Permission Name</label>
-        <!-- <input type="text" [(ngModel)]="name" name="name" required> -->
+        <input type="text" [(ngModel)]="name" name="name" required>
       </div>
   
       <div *ngIf="error" class="error">{{ error }}</div>
   
       <div class="form-actions">
-        <button type="button" class="btn-cancel" routerLink="/admin/permissions">Cancel</button>
+        <button type="button" class="btn-cancel" routerLink="/permissions">Cancel</button>
         <button type="submit" [disabled]="loading" class="btn-submit">
           {{ loading ? 'Updating...' : 'Update Permission' }}
         </button>
